misc: use `valueOf()` and `parseX()`